tests/ui/typeck/typeck_type_placeholder_item.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:158:18
   |
LL | struct BadStruct<_>(_);
   |                  ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:161:16
   |
LL | trait BadTrait<_> {}
   |                ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:173:19
   |
LL | struct BadStruct1<_, _>(_);
   |                   ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:173:22
   |
LL | struct BadStruct1<_, _>(_);
   |                      ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:178:19
   |
LL | struct BadStruct2<_, T>(_, T);
   |                   ^ expected identifier, found reserved identifier

error: associated constant in `impl` without body
  --> $DIR/typeck_type_placeholder_item.rs:215:5
   |
LL |     const C: _;
   |     ^^^^^^^^^^-
   |               |
   |               help: provide a definition for the constant: `= <expr>;`

error[E0403]: the name `_` is already used for a generic parameter in this item's generic parameters
  --> $DIR/typeck_type_placeholder_item.rs:173:22
   |
LL | struct BadStruct1<_, _>(_);
   |                   -  ^ already used
   |                   |
   |                   first use of `_`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:7:14
   |
LL | fn test() -> _ { 5 }
   |              ^
   |              |
   |              not allowed in type signatures
   |              help: replace with the correct return type: `i32`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:10:16
   |
LL | fn test2() -> (_, _) { (5, 5) }
   |               -^--^-
   |               ||  |
   |               ||  not allowed in type signatures
   |               |not allowed in type signatures
   |               help: replace with the correct return type: `(i32, i32)`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:13:15
   |
LL | static TEST3: _ = "test";
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST3: _ = "test";
LL + static TEST3: &str = "test";
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:16:15
   |
LL | static TEST4: _ = 145;
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST4: _ = 145;
LL + static TEST4: i32 = 145;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:19:16
   |
LL | static TEST5: (_, _) = (1, 2);
   |                ^  ^ not allowed in type signatures
   |                |
   |                not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST5: (_, _) = (1, 2);
LL + static TEST5: (i32, i32) = (1, 2);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:22:13
   |
LL | fn test6(_: _) { }
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:25:18
   |
LL | fn test6_b<T>(_: _, _: T) { }
   |                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:28:30
   |
LL | fn test6_c<T, K, L, A, B>(_: _, _: (T, K, L, A, B)) { }
   |                              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:31:13
   |
LL | fn test7(x: _) { let _x: usize = x; }
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:34:22
   |
LL | fn test8(_f: fn() -> _) { }
   |                      ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:66:8
   |
LL |     a: _,
   |        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:68:9
   |
LL |     b: (_, _),
   |         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:68:12
   |
LL |     b: (_, _),
   |            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:123:12
   |
LL |         a: _,
   |            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:125:13
   |
LL |         b: (_, _),
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:125:16
   |
LL |         b: (_, _),
   |                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:158:21
   |
LL | struct BadStruct<_>(_);
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:173:25
   |
LL | struct BadStruct1<_, _>(_);
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:178:25
   |
LL | struct BadStruct2<_, T>(_, T);
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:47:26
   |
LL | fn test11(x: &usize) -> &_ {
   |                         -^
   |                         ||
   |                         |not allowed in type signatures
   |                         help: replace with the correct return type: `&&usize`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:52:52
   |
LL | unsafe fn test12(x: *const usize) -> *const *const _ {
   |                                      --------------^
   |                                      |             |
   |                                      |             not allowed in type signatures
   |                                      help: replace with the correct return type: `*const *const usize`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:58:24
   |
LL |     fn clone(&self) -> _ { Test9 }
   |                        ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -     fn clone(&self) -> _ { Test9 }
LL +     fn clone(&self) -> Test9 { Test9 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:61:37
   |
LL |     fn clone_from(&mut self, other: _) { *self = Test9; }
   |                                     ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -     fn clone_from(&mut self, other: _) { *self = Test9; }
LL +     fn clone_from(&mut self, other: &Test9) { *self = Test9; }
   |

error: missing type for `static` item
  --> $DIR/typeck_type_placeholder_item.rs:74:13
   |
LL |     static A = 42;
   |             ^ help: provide a type for the static variable: `: i32`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:76:15
   |
LL |     static B: _ = 42;
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static B: _ = 42;
LL +     static B: i32 = 42;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:78:22
   |
LL |     static C: Option<_> = Some(42);
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static C: Option<_> = Some(42);
LL +     static C: Option<i32> = Some(42);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:80:21
   |
LL |     fn fn_test() -> _ { 5 }
   |                     ^
   |                     |
   |                     not allowed in type signatures
   |                     help: replace with the correct return type: `i32`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:83:23
   |
LL |     fn fn_test2() -> (_, _) { (5, 5) }
   |                      -^--^-
   |                      ||  |
   |                      ||  not allowed in type signatures
   |                      |not allowed in type signatures
   |                      help: replace with the correct return type: `(i32, i32)`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:86:22
   |
LL |     static FN_TEST3: _ = "test";
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST3: _ = "test";
LL +     static FN_TEST3: &str = "test";
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:89:22
   |
LL |     static FN_TEST4: _ = 145;
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST4: _ = 145;
LL +     static FN_TEST4: i32 = 145;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:92:23
   |
LL |     static FN_TEST5: (_, _) = (1, 2);
   |                       ^  ^ not allowed in type signatures
   |                       |
   |                       not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST5: (_, _) = (1, 2);
LL +     static FN_TEST5: (i32, i32) = (1, 2);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:95:20
   |
LL |     fn fn_test6(_: _) { }
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:98:20
   |
LL |     fn fn_test7(x: _) { let _x: usize = x; }
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:101:29
   |
LL |     fn fn_test8(_f: fn() -> _) { }
   |                             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:115:28
   |
LL |         fn clone(&self) -> _ { FnTest9 }
   |                            ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -         fn clone(&self) -> _ { FnTest9 }
LL +         fn clone(&self) -> FnTest9 { FnTest9 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:118:41
   |
LL |         fn clone_from(&mut self, other: _) { *self = FnTest9; }
   |                                         ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -         fn clone_from(&mut self, other: _) { *self = FnTest9; }
LL +         fn clone_from(&mut self, other: &FnTest9) { *self = FnTest9; }
   |

error[E0282]: type annotations needed
  --> $DIR/typeck_type_placeholder_item.rs:130:21
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                     ^ cannot infer type

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:130:28
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                            ^  ^ not allowed in type signatures
   |                            |
   |                            not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:134:30
   |
LL |     fn fn_test12(x: i32) -> (_, _) { (x, x) }
   |                             -^--^-
   |                             ||  |
   |                             ||  not allowed in type signatures
   |                             |not allowed in type signatures
   |                             help: replace with the correct return type: `(i32, i32)`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:137:33
   |
LL |     fn fn_test13(x: _) -> (i32, _) { (x, x) }
   |                           ------^-
   |                           |     |
   |                           |     not allowed in type signatures
   |                           help: replace with the correct return type: `(i32, i32)`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:142:31
   |
LL |     fn method_test1(&self, x: _);
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:144:31
   |
LL |     fn method_test2(&self, x: _) -> _;
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:144:37
   |
LL |     fn method_test2(&self, x: _) -> _;
   |                                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:147:31
   |
LL |     fn method_test3(&self) -> _;
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:149:26
   |
LL |     fn assoc_fn_test1(x: _);
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:151:26
   |
LL |     fn assoc_fn_test2(x: _) -> _;
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:151:32
   |
LL |     fn assoc_fn_test2(x: _) -> _;
   |                                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:154:28
   |
LL |     fn assoc_fn_test3() -> _;
   |                            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/typeck_type_placeholder_item.rs:163:32
   |
LL | impl BadTrait<_> for BadStruct<_> {}
   |                                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/typeck_type_placeholder_item.rs:163:15
   |
LL | impl BadTrait<_> for BadStruct<_> {}
   |               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:167:34
   |
LL | fn impl_trait() -> impl BadTrait<_> {
   |                                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> $DIR/typeck_type_placeholder_item.rs:182:14
   |
LL | type X = Box<_>;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:188:21
   |
LL | type Y = impl Trait<_>;
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:198:14
   |
LL |     type B = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:211:14
   |
LL |     type A = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:213:14
   |
LL |     type B = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:200:14
   |
LL |     const C: _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:215:14
   |
LL |     const C: _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:202:14
   |
LL |     const D: _ = 42;
   |              ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     const D: _ = 42;
LL +     const D: i32 = 42;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:218:14
   |
LL |     const D: _ = 42;
   |              ^ not allowed in type signatures

error[E0046]: not all trait items implemented, missing: `F`
  --> $DIR/typeck_type_placeholder_item.rs:209:1
   |
LL |     type F: std::ops::Fn(_);
   |     ----------------------- `F` from trait
...
LL | impl Qux for Struct {
   | ^^^^^^^^^^^^^^^^^^^ missing `F` in implementation

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:226:31
   |
LL | fn value() -> Option<&'static _> {
   |               ----------------^-
   |               |               |
   |               |               not allowed in type signatures
   |               help: replace with the correct return type: `Option<&'static u8>`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/typeck_type_placeholder_item.rs:231:17
   |
LL | const _: Option<_> = map(value);
   |                 ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - const _: Option<_> = map(value);
LL + const _: Option<u8> = map(value);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:235:31
   |
LL | fn evens_squared(n: usize) -> _ {
   |                               ^
   |                               |
   |                               not allowed in type signatures
   |                               help: replace with an appropriate return type: `impl Iterator<Item = usize>`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/typeck_type_placeholder_item.rs:240:10
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |          ^ not allowed in type signatures
   |
note: however, the inferred type `Map<Filter<Range<i32>, {closure@typeck_type_placeholder_item.rs:240:29}>, {closure@typeck_type_placeholder_item.rs:240:49}>` cannot be named
  --> $DIR/typeck_type_placeholder_item.rs:240:14
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:40:24
   |
LL |     fn test9(&self) -> _ { () }
   |                        ^
   |                        |
   |                        not allowed in type signatures
   |                        help: replace with the correct return type: `()`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:43:27
   |
LL |     fn test10(&self, _x : _) { }
   |                           ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:107:31
   |
LL |         fn fn_test9(&self) -> _ { () }
   |                               ^
   |                               |
   |                               not allowed in type signatures
   |                               help: replace with the correct return type: `()`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:110:34
   |
LL |         fn fn_test10(&self, _x : _) { }
   |                                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:205:26
   |
LL |     type F: std::ops::Fn(_);
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:205:26
   |
LL |     type F: std::ops::Fn(_);
   |                          ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:167:34
   |
LL | fn impl_trait() -> impl BadTrait<_> {
   |                                  ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:188:21
   |
LL | type Y = impl Trait<_>;
   |                     ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const function `map::<u8>` in constants
  --> $DIR/typeck_type_placeholder_item.rs:231:22
   |
LL | const _: Option<_> = map(value);
   |                      ^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const method `<std::ops::Range<i32> as Iterator>::filter::<{closure@$DIR/typeck_type_placeholder_item.rs:240:29: 240:32}>` in constants
  --> $DIR/typeck_type_placeholder_item.rs:240:22
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |                      ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const method `<Filter<std::ops::Range<i32>, {closure@$DIR/typeck_type_placeholder_item.rs:240:29: 240:32}> as Iterator>::map::<i32, {closure@$DIR/typeck_type_placeholder_item.rs:240:49: 240:52}>` in constants
  --> $DIR/typeck_type_placeholder_item.rs:240:45
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |                                             ^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 83 previous errors

Some errors have detailed explanations: E0015, E0046, E0121, E0282, E0403.
For more information about an error, try `rustc --explain E0015`.
